# batalha-de-dados

./: Makefile  README.MD  app.py  app_login.py  pyproject.toml  requirements.txt
app/: app.py
data/: agg_disciplinas-v2.csv  agg_disciplinas.csv  agg_prof.csv
notebooks/: batalha-de-dados.ipynb
pages/: student.py
